<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" >
    <string name="app_name">Nuance</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Online accounts</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_enable_floating_player">Enable floating controllers</string>
    <string name="action_enable_low_ram">Enable low ram mode</string>
    <string name="title_artist">Artists</string>
    <string name="title_albums">Albums</string>
    <string name="title_musics">Musics</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_playlist">New playlist</string>
    <string name="playlists">Playlists</string>
    <string name="help_step1_title">Welcome</string>
    <string name="help_step1">Just a short guide to help you use this app</string>
    <string name="help_step2_title">Spi music</string>
    <string name="help_step2">Spi music is a light music player that can manage both your local and online library</string>
    <string name="help_step3_title">Refresh album art</string>
    <string name="help_step3">Make your library more beautiful by displaying picture of your favorite albums and artists</string>
    <string name="help_step4_title">Online storage</string>
    <string name="help_step4">Enlarge your library by adding your online sources (hubiC, Deezer, smb, ftp, sftp, ftps)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_player">PlayerActivity</string>

    <string name="indexed_folder_added">Folder %s will be indexed</string>
    <string name="remove_from_indexed_folders">Unindex from library</string>
    <string name="indexed_folder_removed">Folder %s removed</string>
    <string name="add_folder">Add a folder</string>
    <string name="remote_address">Remote address</string>
    <string name="remote_address_error">You must specify a remote address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="port">Port</string>
    <string name="path">Path</string>
    <string name="save_password">Save password</string>
   <string name="show_password">Show password</string>
    <string name="discovered">Discovered</string>
    <string name="indexed_folders">Indexed</string>
    <string name="empty">No indexed folders.\nPlease, press the + button to add a new network folder</string>
    <string name="ssh_prompt">Protocol</string>
    <string-array name="ssh_types" translatable="false">
        <item>ftp://</item>
        <item>sftp://</item>
        <item>ftps://</item>
        <item>smb://</item>
    </string-array>

    <string name="button_add_account">Add Account</string>

    <string name="pref_title_sync_over_mobile">Sync library over mobile network</string>
    <string name="pref_account">Manage hubiC accounts</string>
    <string name="pref_remote">Remote folders</string>
    <string name="pref_deezer">Setup Deezer account</string>
    <string name="pref_deezer_remove">Logout Deezer account</string>

    <string name="help_deezer">Every album, music, and artist you set as favorites\nwill be added to your library</string>
    <string name="next">Next</string>
    <string name="ignore">Ignore</string>
    <string name="pref_title_cover_arts">Get Cover arts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_download_folder">Download folder</string>
    <string name="action_update_library">Update remote Library</string>
    <string name="action_update_deezer_library">Update Deezer Library</string>
    <string name="search_hint">Title, album, artist...</string>
    <string name="action_get_cover">Retriever album covers</string>
    <string name="action_only_local">Offline mode</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_searchable">Search</string>
    <string name="title_activity_network">Network</string>
    <string name="exit">Exit</string>
    <string name="error_permission_storage">Spi Music needs storage permission to access your music, please, grant it on next screen</string>
    <string name="error">Permission error</string>
    <string name="allow">allow</string>
    <string name="local_library_title">Local Library</string>
    <string name="your_music">Your Music</string>
    <string name="favorites">Favorites</string>
    <string name="import_playlist">Import playlist</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>


</resources>
