<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <RelativeLayout
        android:id="@+id/spinner_container"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <Spinner
            android:id="@+id/ssh_spinner"
            android:layout_width="90dip"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/remote"
            android:textAlignment="center"
            android:entries="@array/ssh_types"
            android:hint="@string/ssh_prompt"
            tools:listitem="@android:layout/simple_spinner_item" />

        <EditText
            android:id="@+id/remote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:layout_toRightOf="@id/ssh_spinner"
            android:ems="10"
            android:hint="@string/remote_address"
            android:imeOptions="actionNext"
            android:inputType="textWebEmailAddress" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <EditText
        android:id="@+id/port"
        android:layout_below="@id/spinner_container"
        android:layout_width="50dip"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:imeOptions="actionNext"
        android:inputType="number" />
    <EditText
        android:id="@+id/path"
        android:layout_below="@id/spinner_container"
        android:layout_toRightOf="@id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/path"
        android:imeOptions="actionNext"

        android:singleLine="true" />
    <LinearLayout
        android:id="@+id/credentials_container"
        android:layout_width="fill_parent"
        android:layout_below="@id/path"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/username"

            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/username"

            android:imeOptions="actionNext"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_below="@id/path"
            android:layout_weight="1"
            android:layout_toRightOf="@id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        </LinearLayout>


    <CheckBox
        android:id="@+id/show_password_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/credentials_container"
        android:text="@string/show_password" />



</RelativeLayout>