<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <!-- <CheckBoxPreference
        android:key="pref_sync_over_mobile"
        android:title="@string/pref_title_sync_over_mobile"
		android:defaultValue="false" />
    <CheckBoxPreference
        android:key="pref_cover_arts"
        android:title="@string/pref_title_cover_arts"
		android:defaultValue="false" />

    <Preference
                android:key="folderbutton"
                android:title="@string/pref_download_folder"
                android:summary="Choose download folder"/> -->
    <Preference 
                android:key="accountbutton"
                android:title="@string/pref_account"
                android:summary=""/>

    <Preference
        android:key="remote_indexed_folders"
        android:title="@string/pref_remote"
        android:summary=""/>
    <Preference
        android:key="deezerbutton"
        android:title="@string/pref_deezer"
        android:summary=""/>
</PreferenceScreen>